--- a/index.html
+++ b/index.html
@@ -58,20 +58,43 @@
       margin-bottom: 15px;
     }
 
-    .spinner {
-      border: 6px solid rgba(255, 255, 255, 0.2);
-      border-top: 6px solid #FFD700;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      animation: spin 1s linear infinite;
-      margin: 20px auto;
+    .typing-dots {
       display: none;
+      justify-content: center;
+      align-items: center;
+      margin: 20px auto;
+      height: 40px;
     }
 
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
+    .typing-dots span {
+      width: 10px;
+      height: 10px;
+      margin: 0 5px;
+      background-color: #FFD700;
+      border-radius: 50%;
+      display: inline-block;
+      animation: bounce 1.4s infinite ease-in-out both;
+    }
+
+    .typing-dots span:nth-child(1) {
+      animation-delay: -0.32s;
+    }
+
+    .typing-dots span:nth-child(2) {
+      animation-delay: -0.16s;
+    }
+
+    .typing-dots span:nth-child(3) {
+      animation-delay: 0s;
+    }
+
+    @keyframes bounce {
+      0%, 80%, 100% {
+        transform: scale(0);
+      }
+      40% {
+        transform: scale(1);
+      }
     }
 
     #loadingMessage {
@@ -102,7 +125,11 @@
     <input type="text" id="prompt" placeholder="Describe the image you want...">
     <button onclick="generateImage()">Generate Image</button>
     <div id="loadingText">
-      <div id="spinner" class="spinner"></div>
+      <div id="spinner" class="typing-dots">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
       <div id="loadingMessage"></div>
     </div>
     <div id="imageResult"></div>
@@ -125,7 +152,7 @@
       const timestamp = new Date().getTime();
       const imageUrl = `https://direct-img.rishuapi.workers.dev/?prompt=${encodeURIComponent(prompt)}&t=${timestamp}`;
 
-      spinner.style.display = "block";
+      spinner.style.display = "flex";
       loadingMessage.textContent = "Generating image... Please wait.";
       imageResult.innerHTML = "";
       downloadBtn.style.display = "none";
@@ -143,7 +170,6 @@
           downloadBtn.href = img.src;
           downloadBtn.style.display = "inline-block";
 
-          // Telegram Button
           const telegramBtn = document.createElement("a");
           telegramBtn.href = "https://t.me/Trustedhacker079";
           telegramBtn.target = "_blank";
@@ -160,12 +186,11 @@
             textDecoration: "none"
           });
 
-          // WhatsApp Share Button
           const whatsappBtn = document.createElement("a");
           const whatsappMessage = encodeURIComponent("Check out this AI-generated image: " + img.src);
           whatsappBtn.href = `https://api.whatsapp.com/send?text=${whatsappMessage}`;
           whatsappBtn.target = "_blank";
-          whatsappBtn.textContent = "Share on WhatsApp";
+          whatsappBtn.textContent = "📱 Share on WhatsApp";
           Object.assign(whatsappBtn.style, {
             display: "inline-block",
             marginTop: "10px",
