--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AI Image Generator</title>
+<!doctype html>
+<html lang="en"> 
+<head> 
+  <meta charset="UTF-8"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <title>AI Image Generator</title> 
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -117,24 +117,44 @@
     #downloadBtn:hover {
       background: #218838;
     }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h2>AI Image Generator</h2>
-    <input type="text" id="prompt" placeholder="Describe the image you want...">
-    <button onclick="generateImage()">Generate Image</button>
-    <div id="loadingText">
-      <div id="spinner" class="typing-dots">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <div id="loadingMessage"></div>
-    </div>
-    <div id="imageResult"></div>
-    <a id="downloadBtn" href="#" download="generated-image.jpg">Download Image</a>
-  </div>
+
+    .social-btn {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 10px 20px;
+      border-radius: 8px;
+      font-weight: bold;
+      text-decoration: none;
+      color: white;
+    }
+
+    #telegramBtn {
+      background: #0088cc;
+    }
+
+    #whatsappBtn {
+      background: #25D366;
+    }
+
+    .social-btn:hover {
+      opacity: 0.9;
+    }
+  </style> 
+</head> 
+<body> 
+  <div class="container"> 
+    <h2>AI Image Generator</h2> 
+    <input type="text" id="prompt" placeholder="Describe the image you want..."> 
+    <button onclick="generateImage()">Generate Image</button> 
+    <div id="loadingText"> 
+      <div id="spinner" class="typing-dots"> 
+        <span></span> <span></span> <span></span> 
+      </div> 
+      <div id="loadingMessage"></div> 
+    </div> 
+    <div id="imageResult"></div> 
+    <a id="downloadBtn" href="#" download="generated-image.jpg">Download Image</a> 
+  </div> 
 
   <script>
     function generateImage() {
@@ -167,40 +187,34 @@
           loadingMessage.textContent = "";
           imageResult.appendChild(img);
 
-          downloadBtn.href = img.src;
+          // Convert image to base64
+          const canvas = document.createElement("canvas");
+          const ctx = canvas.getContext("2d");
+          canvas.width = img.width;
+          canvas.height = img.height;
+          ctx.drawImage(img, 0, 0);
+          const base64Image = canvas.toDataURL("image/jpeg");
+
+          // Handle Download functionality (save base64 image to server)
+          downloadBtn.href = base64Image; // Use base64 image for download
           downloadBtn.style.display = "inline-block";
 
+          // Share Image on WhatsApp
+          const whatsappBtn = document.createElement("a");
+          const whatsappMessage = encodeURIComponent("Check out this AI-generated image: " + base64Image);
+          whatsappBtn.href = `https://api.whatsapp.com/send?text=${whatsappMessage}`;
+          whatsappBtn.target = "_blank";
+          whatsappBtn.textContent = "📱 Share on WhatsApp";
+          whatsappBtn.classList.add("social-btn");
+          whatsappBtn.id = "whatsappBtn";
+
+          // Join Telegram Channel button
           const telegramBtn = document.createElement("a");
           telegramBtn.href = "https://t.me/Trustedhacker079";
           telegramBtn.target = "_blank";
           telegramBtn.textContent = "✈️ Join Telegram Channel";
-          Object.assign(telegramBtn.style, {
-            display: "inline-block",
-            marginTop: "10px",
-            marginRight: "10px",
-            background: "#0088cc",
-            color: "#fff",
-            padding: "10px 20px",
-            borderRadius: "8px",
-            fontWeight: "bold",
-            textDecoration: "none"
-          });
-
-          const whatsappBtn = document.createElement("a");
-          const whatsappMessage = encodeURIComponent("Check out this AI-generated image: " + img.src);
-          whatsappBtn.href = `https://api.whatsapp.com/send?text=${whatsappMessage}`;
-          whatsappBtn.target = "_blank";
-          whatsappBtn.textContent = "📱 Share on WhatsApp";
-          Object.assign(whatsappBtn.style, {
-            display: "inline-block",
-            marginTop: "10px",
-            background: "#25D366",
-            color: "#fff",
-            padding: "10px 20px",
-            borderRadius: "8px",
-            fontWeight: "bold",
-            textDecoration: "none"
-          });
+          telegramBtn.classList.add("social-btn");
+          telegramBtn.id = "telegramBtn";
 
           imageResult.appendChild(telegramBtn);
           imageResult.appendChild(whatsappBtn);
@@ -212,6 +226,6 @@
         };
       }, 100);
     }
-  </script>
-</body>
+  </script> 
+</body> 
 </html>
