--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en"> 
- <head> 
-  <meta charset="UTF-8"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>AI Image Generator</title> 
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AI Image Generator</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -117,19 +117,23 @@
     #downloadBtn:hover {
       background: #218838;
     }
-  </style> 
- </head> 
- <body> 
-  <div class="container"> 
-   <h2>AI Image Generator</h2> 
-   <input type="text" id="prompt" placeholder="Describe the image you want..."> <button onclick="generateImage()">Generate Image</button> 
-   <div id="loadingText"> 
-    <div id="spinner" class="typing-dots"> <span></span> <span></span> <span></span> 
-    </div> 
-    <div id="loadingMessage"></div> 
-   </div> 
-   <div id="imageResult"></div> <a id="downloadBtn" href="#" download="generated-image.jpg">Download Image</a> 
-  </div> 
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h2>AI Image Generator</h2>
+    <input type="text" id="prompt" placeholder="Describe the image you want...">
+    <button onclick="generateImage()">Generate Image</button>
+    <div id="loadingText">
+      <div id="spinner" class="typing-dots">
+        <span></span><span></span><span></span>
+      </div>
+      <div id="loadingMessage"></div>
+    </div>
+    <div id="imageResult"></div>
+    <a id="downloadBtn" href="#" download="generated-image.jpg">Download Image</a>
+  </div>
+
   <script>
     function generateImage() {
       const prompt = document.getElementById("prompt").value.trim();
@@ -161,8 +165,19 @@
           loadingMessage.textContent = "";
           imageResult.appendChild(img);
 
-          downloadBtn.href = img.src;
-          downloadBtn.style.display = "inline-block";
+          // Create a Blob and download it as a file
+          fetch(img.src)
+            .then(response => response.blob())
+            .then(blob => {
+              const objectURL = URL.createObjectURL(blob);
+              downloadBtn.href = objectURL;
+              downloadBtn.style.display = "inline-block";
+            })
+            .catch(error => {
+              console.error("Error fetching the image:", error);
+              spinner.style.display = "none";
+              loadingMessage.textContent = "❌ Failed to load image. Try again.";
+            });
 
           const telegramBtn = document.createElement("a");
           telegramBtn.href = "https://t.me/Trustedhacker079";
@@ -206,6 +221,6 @@
         };
       }, 100);
     }
-  </script> 
- </body>
+  </script>
+</body>
 </html>
