--- a/index.html
+++ b/index.html
@@ -5,222 +5,349 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AI Image Generator</title>
   <style>
+    :root {
+      --primary-gradient: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      --secondary-gradient: linear-gradient(45deg, #ff6b6b, #ff8e53);
+      --glass-bg: rgba(255, 255, 255, 0.05);
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', system-ui, sans-serif;
+    }
+
     body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #141e30, #243b55);
-      color: white;
-      text-align: center;
-      padding: 40px 20px;
+      background: linear-gradient(145deg, #0f0c29, #302b63, #24243e);
+      min-height: 100vh;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 2rem;
     }
 
     .container {
-      max-width: 500px;
-      margin: auto;
-      background: rgba(255, 255, 255, 0.1);
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+      background: var(--glass-bg);
+      backdrop-filter: blur(12px);
+      border-radius: 20px;
+      padding: 2.5rem;
+      width: 100%;
+      max-width: 820px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      position: relative;
+      overflow: hidden;
     }
 
-    input {
-      width: 100%;
-      padding: 12px;
-      margin-bottom: 20px;
-      border-radius: 10px;
-      border: none;
-      font-size: 16px;
+    .container::before {
+      content: '';
+      position: absolute;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: linear-gradient(45deg, transparent, rgba(255,255,255,0.1), transparent);
+      transform: rotate(45deg);
+      pointer-events: none;
+      animation: shine 6s infinite;
     }
 
-    button {
+    @keyframes shine {
+      0% { transform: rotate(45deg) translateX(-150%); }
+      100% { transform: rotate(45deg) translateX(150%); }
+    }
+
+    h1 {
+      font-size: 2.4rem;
+      margin-bottom: 0.5rem;
+      background: var(--primary-gradient);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-align: center;
+    }
+
+    .subtitle {
+      color: rgba(255,255,255,0.8);
+      text-align: center;
+      margin-bottom: 2.5rem;
+      font-size: 1.1rem;
+    }
+
+    .input-group {
+      position: relative;
+      margin-bottom: 2rem;
+    }
+
+    #prompt {
       width: 100%;
-      padding: 12px;
-      font-size: 16px;
-      font-weight: bold;
+      padding: 1.2rem;
+      background: rgba(255,255,255,0.08);
+      border: 2px solid rgba(255,255,255,0.1);
+      border-radius: 12px;
+      color: #fff;
+      font-size: 1rem;
+      transition: all 0.3s ease;
+    }
+
+    #prompt:focus {
+      outline: none;
+      border-color: rgba(102, 126, 234, 0.5);
+      background: rgba(255,255,255,0.12);
+      box-shadow: 0 0 15px rgba(102, 126, 234, 0.2);
+    }
+
+    #prompt::placeholder {
+      color: rgba(255,255,255,0.4);
+    }
+
+    #generateBtn {
+      width: 100%;
+      padding: 1.2rem;
+      background: var(--primary-gradient);
       border: none;
-      border-radius: 10px;
-      background: linear-gradient(to right, #ff416c, #ff4b2b);
+      border-radius: 12px;
       color: white;
+      font-size: 1.1rem;
+      font-weight: 600;
       cursor: pointer;
+      transition: transform 0.2s, box-shadow 0.2s;
+      position: relative;
+      overflow: hidden;
     }
 
-    button:hover {
-      opacity: 0.9;
+    #generateBtn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 25px rgba(102, 126, 234, 0.4);
+    }
+
+    #generateBtn.loading {
+      background: linear-gradient(135deg, #2c3e50, #3498db);
+    }
+
+    .loader {
+      display: none;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .spinner {
+      width: 24px;
+      height: 24px;
+      border: 3px solid rgba(255,255,255,0.3);
+      border-top-color: #fff;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      to { transform: rotate(360deg); }
     }
 
     #imageResult {
-      margin-top: 30px;
+      margin-top: 2rem;
+      position: relative;
+      border-radius: 15px;
+      overflow: hidden;
+      transition: all 0.3s ease;
+      opacity: 0;
+      transform: translateY(20px);
     }
 
-    #imageResult img {
-      max-width: 100%;
-      border-radius: 10px;
-      box-shadow: 0 0 12px #fff;
-      margin-bottom: 15px;
+    #imageResult.loaded {
+      opacity: 1;
+      transform: translateY(0);
     }
 
-    .typing-dots {
+    .generated-image {
+      width: 100%;
+      border-radius: 15px;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.3);
+    }
+
+    .download-btn {
+      display: block;
+      margin: 1rem auto 0 auto;
+      background: var(--secondary-gradient);
+      padding: 0.8rem 1.5rem;
+      border-radius: 8px;
+      color: white;
+      text-decoration: none;
+      font-weight: 600;
+      text-align: center;
+      width: fit-content;
+    }
+
+    .particles {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: -1;
+    }
+
+    /* Popup styles */
+    .popup-overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0,0,0,0.5);
       display: none;
       justify-content: center;
       align-items: center;
-      margin: 20px auto;
-      height: 40px;
+      z-index: 9999;
     }
 
-    .typing-dots span {
-      width: 10px;
-      height: 10px;
-      margin: 0 5px;
-      background-color: #FFD700;
-      border-radius: 50%;
-      display: inline-block;
-      animation: bounce 1.4s infinite ease-in-out both;
-    }
-
-    .typing-dots span:nth-child(1) {
-      animation-delay: -0.32s;
-    }
-
-    .typing-dots span:nth-child(2) {
-      animation-delay: -0.16s;
-    }
-
-    .typing-dots span:nth-child(3) {
-      animation-delay: 0s;
-    }
-
-    @keyframes bounce {
-      0%, 80%, 100% {
-        transform: scale(0);
-      }
-      40% {
-        transform: scale(1);
-      }
-    }
-
-    #loadingMessage {
-      color: #FFD700;
-      font-weight: bold;
-    }
-
-    #downloadBtn {
-      display: none;
-      margin-top: 10px;
-      text-decoration: none;
-      background: #28a745;
-      padding: 10px 20px;
+    .popup-box {
+      background: var(--glass-bg);
+      backdrop-filter: blur(16px);
+      border: 1px solid rgba(255,255,255,0.1);
+      padding: 2rem;
+      border-radius: 15px;
+      text-align: center;
+      width: 300px;
       color: white;
-      border-radius: 8px;
-      font-weight: bold;
-      transition: background 0.3s;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
     }
 
-    #downloadBtn:hover {
-      background: #218838;
+    .popup-box button {
+      display: block;
+      margin: 1rem auto 0;
+      padding: 0.8rem 1.2rem;
+      border: none;
+      border-radius: 8px;
+      font-weight: 600;
+      cursor: pointer;
+      width: 100%;
+    }
+
+    .popup-join {
+      background: var(--secondary-gradient);
+      color: #fff;
+    }
+
+    .popup-cancel {
+      background: rgba(255,255,255,0.1);
+      color: #fff;
+      margin-top: 0.5rem;
     }
   </style>
 </head>
 <body>
+  <div class="particles" id="particles"></div>
   <div class="container">
-    <h2>AI Image Generator</h2>
-    <input type="text" id="prompt" placeholder="Describe the image you want...">
-    <button onclick="generateImage()">Generate Image</button>
-    <div id="loadingText">
-      <div id="spinner" class="typing-dots">
-        <span></span><span></span><span></span>
-      </div>
-      <div id="loadingMessage"></div>
+    <h1>AI Image Generator</h1>
+    <p class="subtitle">Transform text into stunning visual art with AI</p>
+    <div class="input-group">
+      <input type="text" id="prompt" placeholder="Describe your vision...">
     </div>
+    <button id="generateBtn" onclick="generateImage()">
+      <span id="btnText">Generate Masterpiece</span>
+      <div class="loader"><div class="spinner"></div></div>
+    </button>
     <div id="imageResult"></div>
-    <a id="downloadBtn" href="#" download="generated-image.jpg">Download Image</a>
+  </div>
+
+  <!-- Telegram Popup -->
+  <div class="popup-overlay" id="popup">
+    <div class="popup-box">
+      <p>🚀 Join our Telegram channel for updates!</p>
+      <button class="popup-join" onclick="window.open('https://t.me/TtustedHacker079', '_blank')">🚀 Join Telegram</button>
+      <button class="popup-cancel" onclick="document.getElementById('popup').style.display='none'">❌ Cancel</button>
+    </div>
   </div>
 
   <script>
     function generateImage() {
       const prompt = document.getElementById("prompt").value.trim();
+      const generateBtn = document.getElementById("generateBtn");
+      const btnText = document.getElementById("btnText");
+      const loader = generateBtn.querySelector('.loader');
       const imageResult = document.getElementById("imageResult");
-      const spinner = document.getElementById("spinner");
-      const loadingMessage = document.getElementById("loadingMessage");
-      const downloadBtn = document.getElementById("downloadBtn");
 
       if (!prompt) {
-        alert("Please enter a prompt.");
+        alert("Please enter a description for your image");
         return;
       }
+
+      generateBtn.classList.add('loading');
+      btnText.style.opacity = '0';
+      loader.style.display = 'block';
+      imageResult.classList.remove('loaded');
 
       const timestamp = new Date().getTime();
       const imageUrl = `https://direct-img.rishuapi.workers.dev/?prompt=${encodeURIComponent(prompt)}&t=${timestamp}`;
 
-      spinner.style.display = "flex";
-      loadingMessage.textContent = "Generating image... Please wait.";
-      imageResult.innerHTML = "";
-      downloadBtn.style.display = "none";
+      const img = new Image();
+      img.src = imageUrl;
+      img.className = 'generated-image';
 
-      setTimeout(() => {
-        const img = new Image();
-        img.src = imageUrl;
-        img.alt = "Generated AI Image";
+      img.onload = () => {
+        const downloadBtn = document.createElement('a');
+        downloadBtn.className = 'download-btn';
+        downloadBtn.textContent = 'Download HD';
+        downloadBtn.download = 'ai-artwork.jpg';
 
-        img.onload = () => {
-          spinner.style.display = "none";
-          loadingMessage.textContent = "";
-          imageResult.appendChild(img);
+        const imageContainer = document.createElement('div');
+        imageContainer.className = 'image-container';
+        imageContainer.appendChild(img);
 
-          // Create a Blob and download it as a file
-          fetch(img.src)
-            .then(response => response.blob())
-            .then(blob => {
-              const objectURL = URL.createObjectURL(blob);
-              downloadBtn.href = objectURL;
-              downloadBtn.style.display = "inline-block";
-            })
-            .catch(error => {
-              console.error("Error fetching the image:", error);
-              spinner.style.display = "none";
-              loadingMessage.textContent = "❌ Failed to load image. Try again.";
-            });
+        imageResult.innerHTML = '';
+        imageResult.appendChild(imageContainer);
+        imageResult.appendChild(downloadBtn);
 
-          const telegramBtn = document.createElement("a");
-          telegramBtn.href = "https://t.me/Trustedhacker079";
-          telegramBtn.target = "_blank";
-          telegramBtn.textContent = "✈️ Join Telegram Channel";
-          Object.assign(telegramBtn.style, {
-            display: "inline-block",
-            marginTop: "10px",
-            marginRight: "10px",
-            background: "#0088cc",
-            color: "#fff",
-            padding: "10px 20px",
-            borderRadius: "8px",
-            fontWeight: "bold",
-            textDecoration: "none"
+        setTimeout(() => {
+          imageResult.classList.add('loaded');
+        }, 50);
+
+        fetch(imageUrl)
+          .then(response => response.blob())
+          .then(blob => {
+            const url = URL.createObjectURL(blob);
+            downloadBtn.href = url;
           });
 
-          const whatsappBtn = document.createElement("a");
-          const whatsappMessage = encodeURIComponent("Check out this AI-generated image: " + img.src);
-          whatsappBtn.href = `https://api.whatsapp.com/send?text=${whatsappMessage}`;
-          whatsappBtn.target = "_blank";
-          whatsappBtn.textContent = "📱 Share on WhatsApp";
-          Object.assign(whatsappBtn.style, {
-            display: "inline-block",
-            marginTop: "10px",
-            background: "#25D366",
-            color: "#fff",
-            padding: "10px 20px",
-            borderRadius: "8px",
-            fontWeight: "bold",
-            textDecoration: "none"
-          });
+        generateBtn.classList.remove('loading');
+        btnText.style.opacity = '1';
+        loader.style.display = 'none';
+      };
 
-          imageResult.appendChild(telegramBtn);
-          imageResult.appendChild(whatsappBtn);
-        };
-
-        img.onerror = () => {
-          spinner.style.display = "none";
-          loadingMessage.textContent = "❌ Failed to load image. Try again.";
-        };
-      }, 100);
+      img.onerror = () => {
+        generateBtn.classList.remove('loading');
+        btnText.style.opacity = '1';
+        loader.style.display = 'none';
+        alert("Image generation failed. Please try again.");
+      };
     }
+
+    function createParticles() {
+      const particles = document.getElementById('particles');
+      for (let i = 0; i < 50; i++) {
+        const particle = document.createElement('div');
+        particle.style.position = 'absolute';
+        particle.style.width = '2px';
+        particle.style.height = '2px';
+        particle.style.background = 'rgba(255,255,255,0.3)';
+        particle.style.borderRadius = '50%';
+        particle.style.left = Math.random() * 100 + '%';
+        particle.style.top = Math.random() * 100 + '%';
+        particle.style.animation = `float ${5 + Math.random() * 10}s infinite`;
+        particles.appendChild(particle);
+      }
+    }
+
+    createParticles();
+
+    // Show popup after 10 seconds
+    setTimeout(() => {
+      document.getElementById('popup').style.display = 'flex';
+    }, 10000);
   </script>
 </body>
 </html>
