--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   <div class="popup-overlay" id="popup">
     <div class="popup-box">
       <p>🚀 Join our Telegram channel for updates!</p>
-      <button class="popup-join" onclick="window.open('https://t.me/TtustedHacker079', '_blank')">🚀 Join Telegram</button>
+      <button class="popup-join" onclick="window.open('https://t.me/TrustedHacker079', '_blank')">🚀 Join Telegram</button>
       <button class="popup-cancel" onclick="document.getElementById('popup').style.display='none'">❌ Cancel</button>
     </div>
   </div>
