--- a/index.html
+++ b/index.html
@@ -275,13 +275,13 @@
   <div class="popup-overlay" id="popup">
     <div class="popup-box">
       <p>🚀 Join our Telegram channel for updates!</p>
-      <button class="popup-join" onclick="window.open('https://t.me/TtustedHacker079', '_blank')">🚀 Join Telegram</button>
+      <button class="popup-join" onclick="window.open('https://t.me/TrustedHacker079', '_blank')">🚀 Join Telegram</button>
       <button class="popup-cancel" onclick="document.getElementById('popup').style.display='none'">❌ Cancel</button>
     </div>
   </div>
 
   <div class="footer"> 
-    <p>© 2025 Ai Image Generator | Developed By <a href="https://t.me/trustedhacker079" class="creator">Nasir Hacker</a></p> 
+    <p>© 2025 Ai Image Generator | Developed By <a href="https://t.me/Trustedhacker079" class="creator">Nasir Hacker</a></p> 
   </div>
 
   <script>
